--- a/documentation.html
+++ b/documentation.html
@@ -8,16 +8,24 @@
 </head>
 <body>
     <h1>myFlix</h1>
+    <h2>Objective</h2>
+    <p>To build the server-side component of a “movies” web application. The web
+        application will provide users with access to information about different
+        movies, directors, and genres. Users will be able to sign up, update their
+        personal information, and create a list of their favorite movies.</p>
+
+    <h2>Features</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Return a list of ALL movies to the user</li>
+        <li>Return data (description, genre, director, image URL, whether it’s featured or not) about a
+            single movie by title to the user</li>
+        <li>Return data about a genre (description) by name/title (e.g., “Thriller”)</li>
+        <li>Return data about a director (bio, birth year, death year) by name</li>
+        <li>Allow new users to register</li>
+        <li>Allow users to update their user info (username, password, email, date of birth)</li>
+        <li>Allow users to add a movie to their list of favorites</li>
+        <li>Allow users to remove a movie from their list of favorites</li>
+        <li>Allow existing users to deregister</li>
     </ul>
 </body>
 </html>
