moved documentation.html into public folder

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -17,7 +17,7 @@
     <h2>Features</h2>
     <ul>
         <li>Return a list of ALL movies to the user</li>
-        <li>Return data (description, genre, director, image URL, whether it’s featured or not) about a
+        <li>Return data (description, genre, director, image URL, whether it's featured or not) about a
             single movie by title to the user</li>
         <li>Return data about a genre (description) by name/title (e.g., “Thriller”)</li>
         <li>Return data about a director (bio, birth year, death year) by name</li>
