created table in documentation.html

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -27,5 +27,15 @@
         <li>Allow users to remove a movie from their list of favorites</li>
         <li>Allow existing users to deregister</li>
     </ul>
+
+    <table>
+        <tr>
+            <th>Business Logic</th>
+            <th>URL</th>
+            <th>HTTP Method</th>
+            <th>Request body data format</th>
+            <th>Response body data format</th>
+        </tr>
+    </table>
 </body>
 </html>
