--- a/public/documentation.html
+++ b/public/documentation.html
@@ -36,6 +36,33 @@
             <th>Request body data format</th>
             <th>Response body data format</th>
         </tr>
+        <tr>
+            <td>Return a list of all movies to the user</td>
+        </tr>
+        <tr>
+            <td>Return data (description, genre, director, image, URL, whether it's featured or not) about a single movie by title to the user</td>
+        </tr>
+        <tr>
+            <td>Return data about a genre (description) by name/title (e.g., "Thriller")</td>
+        </tr>
+        <tr>
+            <td>Return data about a director (bio, birth year, death year) by name</td>
+        </tr>
+        <tr>
+            <td>Allow new users to register</td>
+        </tr>
+        <tr>
+            <td>Allows users to update their user info (username)</td>
+        </tr>
+        <tr>
+            <td>Allow users to add a movie to their list of favorites (showing only a text that a movie has been added)</td>
+        </tr>
+        <tr>
+            <td>Allow users to remove a movie from their list of favorites (showing only a text that a movie has been removed)</td>
+        </tr>
+        <tr>
+            <td>Allow existing users to deregister (showing only a text that a user email has been removed)</td>
+        </tr>
     </table>
 </body>
 </html>
