updated index.js and documentation.html

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -87,8 +87,8 @@
             </td>
         </tr>
         <tr>
-            <td>Allows users to update their user info (username)</td>
-            <td>/users/:username</td>
+            <td>Allows users to update their user info</td>
+            <td>/users/:username/:profile/:email</td>
             <td>PUT</td>
             <td>A text message indicating that the user's username has been successfully updated</td>
         </tr>
