--- a/public/documentation.html
+++ b/public/documentation.html
@@ -1,115 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documentation</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>myFlix</h1>
     <h2>Objective</h2>
-    <p>To build the server-side component of a “movies” web application. The web
-        application will provide users with access to information about different
-        movies, directors, and genres. Users will be able to sign up, update their
-        personal information, and create a list of their favorite movies.</p>
+    <p>
+      To build the server-side component of a “movies” web application. The web
+      application will provide users with access to information about different
+      movies, directors, and genres. Users will be able to sign up, update their
+      personal information, and create a list of their favorite movies.
+    </p>
 
     <h2>Features</h2>
     <ul>
-        <li>Return a list of ALL movies to the user</li>
-        <li>Return data (description, genre, director, image URL, whether it's featured or not) about a
-            single movie by title to the user</li>
-        <li>Return data about a genre (description) by name/title (e.g., “Thriller”)</li>
-        <li>Return data about a director (bio, birth year, death year) by name</li>
-        <li>Allow new users to register</li>
-        <li>Allow users to update their user info (username, password, email, date of birth)</li>
-        <li>Allow users to add a movie to their list of favorites</li>
-        <li>Allow users to remove a movie from their list of favorites</li>
-        <li>Allow existing users to deregister</li>
+      <li>Return a list of ALL movies to the user</li>
+      <li>
+        Return data (description, genre, director, image URL, whether it's
+        featured or not) about a single movie by title to the user
+      </li>
+      <li>
+        Return data about a genre (description) by name/title (e.g., “Thriller”)
+      </li>
+      <li>
+        Return data about a director (bio, birth year, death year) by name
+      </li>
+      <li>Allow new users to register</li>
+      <li>
+        Allow users to update their user info (username, password, email, date
+        of birth)
+      </li>
+      <li>Allow users to add a movie to their list of favorites</li>
+      <li>Allow users to remove a movie from their list of favorites</li>
+      <li>Allow existing users to deregister</li>
     </ul>
 
     <table>
-        <tr>
-            <th>Request</th>
-            <th>URL</th>
-            <th>HTTP Method</th>
-            <th>Response body data format</th>
-        </tr>
-        <tr>
-            <td>Return a list of all movies to the user</td>
-            <td>/movies</td>
-            <td>GET</td>
-            <td>A JSON object holding data about all the movies</td>
-        </tr>
-        <tr>
-            <td>Return data (description, genre, director, image, URL, whether it's featured or not) about a single movie by title to the user</td>
-            <td>/movies/:title</td>
-            <td>GET</td>
-            <td>A JSON object holding data about a single movie, containing a title, year, genre, description, director, and image URL. Example: <br>
-                { <br>
-                    title: "..." <br>
-                    year: "..." <br>
-                    genre: "..." <br>
-                    description: "..." <br>
-                    director: "..." <br>
-                    movie poster: [image URL] <br>
-                }
-            </td>
-        </tr>
-        <tr>
-            <td>Return data about a genre (description) by category (e.g., "Thriller")</td>
-            <td>/genres/:category</td>
-            <td>GET</td>
-            <td>A JSON object holding data about a genre</td>
-        </tr>
-        <tr>
-            <td>Return data about a director (bio, birth year, death year) by name</td>
-            <td>/director/:name</td>
-            <td>GET</td>
-            <td>A JSON object holding data about a director, containing name, birth year, death year, and a bio. Example: <br>
-                { <br>
-                    name: "..." <br>
-                    born: "..." <br>
-                    died: "..." <br>
-                    bio: "..." <br>
-                }
-            </td>
-        </tr>
-        <tr>
-            <td>Allow new users to register</td>
-            <td>/users</td>
-            <td>POST</td>
-            <td>A JSON object holding data about the user that was added, including username and email. Example: <br>
-                { <br>
-                    username: "..." <br>
-                    email: "..." <br>
-                }
-            </td>
-        </tr>
-        <tr>
-            <td>Allows users to update their user info</td>
-            <td>/users/:username/:profile/:email</td>
-            <td>PUT</td>
-            <td>A text message indicating that the user's username has been successfully updated</td>
-        </tr>
-        <tr>
-            <td>Allow users to add a movie to their list of favorites (showing only a text that a movie has been added)</td>
-            <td>/favorites/:title</td>
-            <td>PUT</td>
-            <td>A text message indicating that a movie has sucessfully added to their favorites list</td>
-        </tr>
-        <tr>
-            <td>Allow users to remove a movie from their list of favorites (showing only a text that a movie has been removed)</td>
-            <td>/favorites/:title</td>
-            <td>DELETE</td>
-            <td>A text message indicating that a movie has been successfully removed from their favorites list</td>
-        </tr>
-        <tr>
-            <td>Allow existing users to deregister (showing only a text that a user email has been removed)</td>
-            <td>/users/:username</td>
-            <td>DELETE</td>
-            <td>A text message indicating that the user has been successfully deregistered</td>
-        </tr>
+      <tr>
+        <th>Request</th>
+        <th>URL</th>
+        <th>HTTP Method</th>
+        <th>Response body data format</th>
+      </tr>
+      <tr>
+        <td>Return a list of all movies to the user</td>
+        <td>/movies</td>
+        <td>GET</td>
+        <td>A JSON object holding data about all the movies</td>
+      </tr>
+      <tr>
+        <td>
+          Return data (description, genre, director, image, URL, whether it's
+          featured or not) about a single movie by title to the user
+        </td>
+        <td>/movies/:title</td>
+        <td>GET</td>
+        <td>
+          A JSON object holding data about a single movie, containing a title,
+          year, genre, description, director, and image URL. Example: <br />
+          { <br />
+          title: "..." <br />
+          year: "..." <br />
+          genre: "..." <br />
+          description: "..." <br />
+          director: "..." <br />
+          movie poster: [image URL] <br />
+          }
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Return data about a genre (description) by category (e.g., "Thriller")
+        </td>
+        <td>/genres/:category</td>
+        <td>GET</td>
+        <td>A JSON object holding data about a genre</td>
+      </tr>
+      <tr>
+        <td>
+          Return data about a director (bio, birth year, death year) by name
+        </td>
+        <td>/director/:name</td>
+        <td>GET</td>
+        <td>
+          A JSON object holding data about a director, containing name, birth
+          year, death year, and a bio. Example: <br />
+          { <br />
+          name: "..." <br />
+          born: "..." <br />
+          died: "..." <br />
+          bio: "..." <br />
+          }
+        </td>
+      </tr>
+      <tr>
+        <td>Allow new users to register</td>
+        <td>/users</td>
+        <td>POST</td>
+        <td>
+          A JSON object holding data about the user that was added, including
+          username and email. Example: <br />
+          { <br />
+          username: "..." <br />
+          email: "..." <br />
+          }
+        </td>
+      </tr>
+      <tr>
+        <td>Allows users to update their user info</td>
+        <td>/users/:username/:profile/:email</td>
+        <td>PUT</td>
+        <td>
+          A text message indicating that the user's username has been
+          successfully updated
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Allow users to add a movie to their list of favorites (showing only a
+          text that a movie has been added)
+        </td>
+        <td>/favorites/:title</td>
+        <td>PUT</td>
+        <td>
+          A text message indicating that a movie has sucessfully added to their
+          favorites list
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Allow users to remove a movie from their list of favorites (showing
+          only a text that a movie has been removed)
+        </td>
+        <td>/favorites/:title</td>
+        <td>DELETE</td>
+        <td>
+          A text message indicating that a movie has been successfully removed
+          from their favorites list
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Allow existing users to deregister (showing only a text that a user
+          email has been removed)
+        </td>
+        <td>/users/:username</td>
+        <td>DELETE</td>
+        <td>
+          A text message indicating that the user has been successfully
+          deregistered
+        </td>
+      </tr>
     </table>
-</body>
+  </body>
 </html>
